cmake_minimum_required(VERSION 3.10)
project(Aribon)

set(CMAKE_CXX_STANDARD 14)

add_executable(Aribon
        ants.cpp
        bestcowline.cpp
        dfs.cpp
        donyoku.cpp
        FenceRepair.cpp
        fib.cpp
        fib2.cpp
        kujibiki.cpp
        kujibiki2.cpp
        kukan.cpp
        lakecounting.cpp
        meiro.cpp
        queue.cpp
        sankaku.cpp
        sarumans_army.cpp
        stack.cpp
        test.cpp
        tokusyu.cpp)
